--- a/UORespawnApp/Components/Controls/SpawnPacksComponent.razor
+++ b/UORespawnApp/Components/Controls/SpawnPacksComponent.razor
@@ -71,7 +71,7 @@
                 <div class="card-body">
                     @if (SelectedPack != null)
                     {
-                        <h6 class="mb-3">@SelectedPack.Metadata.Name</h6>
+                        <h5 class="mb-3 text-center" style="color: goldenrod; font-weight: bold;">@SelectedPack.Metadata.Name</h5>
                         <div class="row g-2">
                             <div class="col-6">
                                 <div class="stat-tile">
@@ -114,29 +114,29 @@
                         <div class="spawn-type-list">
                             <div class="spawn-type-column">
                                 <div class="d-flex justify-content-between">
-                                    <span>Water</span>
+                                    <span style="color: #6ea8fe;">Water</span>
                                     <span>@GetSpawnTypeCount("Water")</span>
                                 </div>
                                 <div class="d-flex justify-content-between">
-                                    <span>Weather</span>
+                                    <span style="color: #6ea8fe;">Weather</span>
                                     <span>@GetSpawnTypeCount("Weather")</span>
                                 </div>
                                 <div class="d-flex justify-content-between">
-                                    <span>Timed</span>
+                                    <span style="color: #6ea8fe;">Timed</span>
                                     <span>@GetSpawnTypeCount("Timed")</span>
                                 </div>
                             </div>
                             <div class="spawn-type-column">
                                 <div class="d-flex justify-content-between">
-                                    <span>Common</span>
+                                    <span style="color: #6ea8fe;">Common</span>
                                     <span>@GetSpawnTypeCount("Common")</span>
                                 </div>
                                 <div class="d-flex justify-content-between">
-                                    <span>Uncommon</span>
+                                    <span style="color: #6ea8fe;">Uncommon</span>
                                     <span>@GetSpawnTypeCount("Uncommon")</span>
                                 </div>
                                 <div class="d-flex justify-content-between">
-                                    <span>Rare</span>
+                                    <span style="color: #6ea8fe;">Rare</span>
                                     <span>@GetSpawnTypeCount("Rare")</span>
                                 </div>
                             </div>
